Commit of Content/KBTopicTemplate.htm

--- a/Project A10/Content/KBTopicTemplate.htm
+++ b/Project A10/Content/KBTopicTemplate.htm
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:conditions="Default.Not Ready for Publish" MadCap:lastBlockDepth="6" MadCap:lastHeight="625" MadCap:lastWidth="1523">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:conditions="Default.Not Ready for Publish" MadCap:lastBlockDepth="6" MadCap:lastHeight="625" MadCap:lastWidth="1282">
     <head>
     </head>
     <body>
-        <h1>Article Title</h1>
+        <h1>Article Titlenfgjfgjfgj</h1>
         <table style="width: 100%;caption-side: top;margin-left: 0;margin-right: auto;mc-table-style: url('Resources/TableStyles/KBTable2.css');" summary="Article number, product name and version number" class="TableStyle-KBTable2" cellspacing="0">
             <col style="width: 33%;" class="TableStyle-KBTable2-Column-Column1" />
             <col style="width: 33%;" class="TableStyle-KBTable2-Column-Column1" />
